# OrangeGatePluginValTest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: pluginval.yml
Source/: AboutPage.cpp  AboutPage.h  AnimatedToggleButton.cpp  AnimatedToggleButton.h  Apvts.cpp  Apvts.h  BackgroundImage.cpp  BackgroundImage.h  BoxShadow.cpp  BoxShadow.h  ControlPanel.cpp  ControlPanel.h  Filter.cpp  Filter.h  FilterView.cpp  FilterView.h  FilterVisualizer.cpp  FilterVisualizer.h  GateMultiplier.cpp  GateMultiplier.h  GateProcessor.cpp  GateProcessor.h  Header.cpp  Header.h  LookAndFeels.cpp  LookAndFeels.h  OrangeGate.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorInterface.h  RmsLevelCalculator.cpp  RmsLevelCalculator.h  SpectrumComponent.cpp  SpectrumComponent.h  SpectrumComponentBase.cpp  SpectrumComponentBase.h  SpectrumLevelValue.cpp  SpectrumLevelValue.h  (+8 more)
